--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #google_maps_flutter: ^2.10.0
   http: ^1.3.0
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
@@ -22,9 +21,9 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_riverpod: ^2.4.9
   uuid: ^4.2.2
-  material_floating_search_bar_2: ^0.5.0
-  cupertino_icons: ^1.0.8
 
+  geolocator: ^13.0.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
